--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ton": "^13.9.0"
+    "ton": "^13.9.0",
+    "tonweb": "^0.0.66"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
